# talks

2019/compile-time-programming/: README.md
2019/compile-time-programming/code-snippets/: page-10.cpp  page-11.cpp  page-12.cpp  page-13.cpp  page-14.cpp  page-15.cpp  page-16.cpp  page-17.cpp  page-18.cpp  page-20-sbo.cpp  page-20.cpp  page-26.cpp  page-27.cpp  page-39.cpp  page-43.cpp  page-44.cpp  page-48.cpp  page-50.cpp  page-53.cpp
2020/design-patterns/: .gitignore  README.md
2020/design-patterns/code-samples/builder/: CMakeLists.txt  main.cpp
2020/design-patterns/code-samples/crtp/: main.cpp
2020/design-patterns/code-samples/crtp-dynamic-dispatch/: for_constexpr.hpp  main.cpp
2020/design-patterns/code-samples/factory/: main.cpp
2020/design-patterns/code-samples/factory-improved/: CMakeLists.txt  main.cpp
2020/design-patterns/code-samples/polymorphism-with-a-modern-twist/: CMakeLists.txt  main.cpp
2020/design-patterns/code-samples/singleton/: main.cpp
2020/design-patterns/code-samples/visitor/: CMakeLists.txt  main.cpp
2020/design-patterns/code-samples/visitor/include/: graph.hpp  visitor.hpp
2020/design-patterns/code-samples/visitor/src/: visitor.cpp
2024/clean-apis-with-huma-rocks/: all.slide
2024/clean-apis-with-huma-rocks/demo/: types.go
2025/zero-to-one-simplifying-kubernetes-monitoring-with-grafana-helm-chart/demo/: .env.example  01_create_cluster.sh  02_install_k8s_monitoring.sh  03_install_quickpizza.sh  04_delete_cluster.sh
2026/agentic-engineering-beyond-simple-features/: talk.md
(+14 files in other folders)
